Bug 1827950 - Don't attempt to use font extents if we didn't get a valid 'head' table, or if it's not an sfnt resource. r=lsalzman, a=dsmith

Differential Revision: https://phabricator.services.mozilla.com/D175391