gfx/thebes/gfxFont.cpp
@@ -2470,7 +2470,15 @@ void gfxFont::Draw(const gfxTextRun* aTextRun, uint32_t aStart, uint32_t aEnd,
 
   // Figure out the maximum extents for the font, accounting for synthetic
   // oblique and bold.
-  fontParams.fontExtents = GetFontEntry()->GetFontExtents(mFUnitsConvFactor);
+  if (mFUnitsConvFactor > 0.0) {
+    fontParams.fontExtents = GetFontEntry()->GetFontExtents(mFUnitsConvFactor);
+  } else {
+    // Was it not an sfnt? Maybe on Linux... use arbitrary huge extents, so we
+    // don't inadvertently clip stuff. A bit less efficient than true extents,
+    // but this should be extremely rare.
+    auto size = GetAdjustedSize();
+    fontParams.fontExtents = Rect(-2 * size, -2 * size, 5 * size, 5 * size);
+  }
   if (fontParams.obliqueSkew != 0.0f) {
     gfx::Point p(fontParams.fontExtents.x, fontParams.fontExtents.y);
     gfx::Matrix skew(1, 0, fontParams.obliqueSkew, 1, 0, 0);
